2006-08-02  Murray Cumming  <murrayc@murrayc.com>

	* examples/book/printing/advanced/previewdialog.cc: Constructor:
	Improve the packing of the widgets.
	on_popreview_got_page_size(): Add a comment to explain.

2006-08-02  Murray Cumming  <murrayc@murrayc.com>

	* examples/book/printing/advanced/previewdialog.cc:
	Constructor: Initialize m_DpiX and m_DpiY, as noticed by valgrind. 
	Connect to signals here instead of later, so we do not risk connecting 
	more than once.
	on_drawing_area_realized(): Check gdk_window is not null before using it.
	on_popreview_got_page_size(): Check that drawing_area is realized before 
	trying to get its allocation. Possibly not necessary. Check the pango 
	layout is not null before using it.
	* examples/book/printing/advanced/printformoperation.cc: on_draw_page(): 
	Check that the print context and pango layout are not null before using 
	them.
	* examples/book/printing/advanced/printformoperation.h: Connect to the 
	hide signal of the dialog instead of delete_event().

2006-08-02  Murray Cumming  <murrayc@murrayc.com>

	* examples/book/printing/advanced/previewdialog.cc:
	* examples/book/printing/advanced/previewdialog.h: Rename the signal 
	handlers so it is is bit clearer. Use show_all_children() instead of 
	show_all() so that the caller can decided when to show the window.
	* examples/book/printing/advanced/printformoperation.cc: Use show(), 
	and set the dialog pointer to 0 after deleting it.

2006-08-02  Armin Burgmeier  <armin@arbur.net>

	* gtk/src/fontbutton.hg: Renamed constructor argument to font_name
	for gmmproc to produce the correct property name.


2006-08-02  Marko Anastasov  <marko@marko.anastasov.name>

	* examples/book/printing/advanced/previewdialog.cc:
	* examples/book/printing/advanced/previewdialog.h:
	* examples/book/printing/advanced/printformoperation.cc:
	* examples/book/printing/advanced/printformoperation.h:
	Further efforts to fix #347857. See comment #14.
	* gtk/src/pagesetup.hg: