@@ -1,3 +1,10 @@
+2006-08-03  Marko Anastasov  <marko@marko.anastasov.name>
+
+	* examples/book/printing/advanced/previewdialog.cc:
+	* examples/book/printing/advanced/previewdialog.h:
+	Added on_hide(), so that we call PrintOperationPreview's end_preview()
+	on window manager's close action too.
+
 2006-08-02  Murray Cumming  <murrayc@murrayc.com>
 
 	* examples/book/printing/advanced/previewdialog.cc: Constructor:
